apps/petcarelog/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petcarelog
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: petcarelog
          image: 194722398200.dkr.ecr.ap-northeast-2.amazonaws.com/team5-petcarelog-dev:61747dbf222cfd66384012059009e44ddf278a3c
