apps/petcarelog/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petcarelog-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: petcarelog-dev
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=petcarelog,team=team5
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petcarelog-service
                port:
                  number: 80
